# impact

./: .gitignore  .gitmodules  README.md  find_robot.bash  record_data.bash  reduce_latency.sh  workbench.bash
src/actuated_umi/: package.xml  setup.cfg  setup.py
src/actuated_umi/actuated_umi/: actuated_umi_node.py  motor_control.py
src/actuated_umi/calibration/: 20250506-133052.npy  20250526-133247.npy  20250623-095223.npy  20250714-134732.npy  20250801-155225.npy
src/actuated_umi/config/: inference_qos.yaml
src/actuated_umi/scripts/: calibrate_gripper.py
src/aruco_msgs/: CMakeLists.txt  package.xml
src/feats/: package.xml  setup.py  (+1 more)
src/imitator/: evaluate_policy.py  package.xml  setup.cfg  setup.py
src/imitator/config/: inference_qos.yaml
src/imitator/imitator/: imitator_node.py  imitator_node_binary.py  imitator_node_force.py  imitator_node_grape_force.py  imitator_node_grape_gripper.py  imitator_node_gripper.py  imitator_node_new.py  imitator_node_new_fdz.py
src/imitator/lerobot/: ORIGIN.txt
src/imitator/lerobot/lerobot/configs/: train.py
src/imitator/scripts/: awake_AI.py  calibrate_gravity_robot.py  check_dataset.py  create_lerobot_dataset.py  create_lerobot_dataset_binary.py  create_lerobot_dataset_force.py  create_lerobot_dataset_gripper.py  create_lerobot_dataset_v2.py  evaluate_policy.py  move_robot_joint_states.py  replay_robot_movement.py
src/impact/: package.xml  setup.cfg  setup.py
src/impact/calibration/: 20250304-134647.npy  calibrate_gripper.py
src/impact/config/: data_collection.yaml
src/impact/impact/: binary_control.py  force_control.py  force_control_v2.py  force_trajectory_publisher.py  gripper_control.py  move_robot.py
src/impact/impact/actuated_umi/: actuated_umi_node.py
src/impact/impact/realsense_d405/: detect_aruco_node.py  realsense_d405_node.py
src/impact/launch/: actuated_umi_feats_launch.py  actuated_umi_feats_launch.xml  actuated_umi_launch.py  actuated_umi_launch.xml  force_control_launch.xml  umi_feats_launch.py  umi_feats_launch.xml
src/impact/notes/: todo.txt
src/impact/scripts/: calibrate_gripper.py  imitate_test.py  imitator.py  mcap_to_hdf5.py  pwm_calibration.py  pwm_test.py
(+60 files in other folders)
